Removed em font size from mobile search toggle button to make sure it's not shifts on settings font increases

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.11 -  10/21/2019 
+ * CA State Template v5 -  @version v5.0.11 -  10/30/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -13581,9 +13581,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
    /source/scss/cagov/nav-mobile-controls.scss
 ----------------------------------------- */
 .mobile-controls {
-  font-size: 40px;
-  font-size: 2.5rem;
-  padding: .2em;
+  padding: 5px;
   cursor: pointer;
   text-align: right;
   position: relative;
@@ -13644,6 +13642,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .mobile-controls .toggle-search {
   padding: 0;
   width: 52px;
+  font-size: 40px;
   border: none;
   background: none;
   cursor: pointer;
